# pallet-block-reward
#
# Custom FRAME pallet that mints a block reward for the block author on every
# finalized block and halves that reward every HalvingInterval blocks,
# mirroring Bitcoin's fixed-supply emission schedule.
#
# Crate type: `no_std` pallet (compiles to both native and WASM targets).

[package]
name = "pallet-block-reward"
version = "1.0.0"
description = "XNET Block Reward Pallet — fixed-supply emission with Bitcoin-style halving"
authors = ["XNET Protocol Team"]
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/xnetcoin/xnet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# SCALE codec + metadata — required by all FRAME pallets.
codec      = { workspace = true }
scale-info = { workspace = true }

# Core FRAME infrastructure.
frame-support = { workspace = true }
frame-system  = { workspace = true }

# Runtime primitives.
sp-runtime = { workspace = true }
sp-std     = { workspace = true }

# Used for the `Currency` and `deposit_creating` traits.
pallet-balances = { workspace = true }

# Optional: only compiled when the `runtime-benchmarks` feature is active.
frame-benchmarking = { workspace = true, optional = true }

# =============================================================================
# Dev Dependencies (tests only — not compiled into WASM)
# =============================================================================

[dev-dependencies]
sp-io   = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }

# =============================================================================
# Feature Flags
# =============================================================================

[features]
default = ["std"]

# Enable std library — used for native (non-WASM) builds.
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
	"frame-benchmarking?/std",
]

# Unlocks `#[benchmarks]` blocks inside the pallet for weight measurement.
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# Enables `try-runtime` state-transition testing hooks.
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
