[package]
name = "sp-database"
version = "4.0.0-dev"
authors = ["XNET Protocol Team <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "XNET database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
kvdb = "0.13.0"
parking_lot = "0.12.1"
